--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-named-routes",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Express Named Routes",
   "keywords": ["express"],
   "author": "RGBboy <me@rgbboy.com>",
@@ -10,6 +10,9 @@
     "mocha": "1.4.x",
     "supertest": "0.2.0",
     "should": "1.1.x"
+  },
+  "scripts" : {
+    "test" : "make test"
   },
   "main": "index"
 }
