--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "express": "3.0.x",
     "mocha": "1.4.x",
-    "supertest": "0.2.0",
+    "supertest": "0.2.x",
     "should": "1.1.x"
   },
   "scripts" : {
